# QMidiPlayer

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.md  README.md  main.cpp  qdialskulpturestyle.cpp  qmidiplayer.pro  qmidiplayerlite.pro  qmpchanneleditor.cpp  qmpchanneleditor.hpp  qmpchanneleditor.ui  qmpchannelswindow.cpp  qmpchannelswindow.hpp  qmpchannelswindow.ui  qmpefxwindow.cpp  qmpefxwindow.hpp  qmpefxwindow.ui  qmphelpwindow.cpp  qmphelpwindow.hpp  qmphelpwindow.ui  qmpinfowindow.cpp  qmpinfowindow.hpp  qmpinfowindow.ui  qmpmainwindow.cpp  qmpmainwindow.hpp  qmpmainwindow.ui  qmpmidiplay.cpp  qmpmidiplay.hpp  qmpmidiread.cpp  qmpplistwindow.cpp  qmpplistwindow.hpp  qmpplistwindow.ui  qmppresetselect.cpp  qmppresetselect.hpp  qmppresetselect.ui  qmpsettingswindow.cpp  (+3 more)
.github/workflows/: windows-msys2.yml
core/: CMakeLists.txt  qmpmidimapperrtmidi.cpp  qmpmidimappers.hpp  qmpmidioutfluid.cpp  qmpmidioutfluid.hpp  qmpmidioutrtmidi.cpp  qmpmidioutrtmidi.hpp  qmpmidiplay.cpp  qmpmidiplay.hpp  qmpmidiread.cpp
debian/: changelog  control  copyright  files  qmidiplayer-lite.install  qmidiplayer-plugin-keyboard.install  qmidiplayer-plugin-midifmt.install  qmidiplayer-plugin-visualization.install  qmidiplayer.install  rules
doc/: APIdoc.md  SD-20_Native.devinit  SD-80_SD-90_Native.devinit  channeldialog.html  channeleditor.html  cmdargs.html  efxdialog.html  index.html  index_internal.html  license.html  license_internal.html  mainwindow.html  miscellaneous.html  optionsdialog.html  plistdialog.html  qmidiplayer  styles.css  troubleshooting.html  version.html  version_internal.html  visualization.html
img/: convpng  qmidiplayer.xpm
include/: qmpcorepublic.hpp
midifmt-plugin/: CMakeLists.txt  midifmt-plugin.pro  midifmt-plugin.rc  midifmt-plugin.rc.in  midifmtplugin.cpp  midifmtplugin.hpp
mpris-plugin/: CMakeLists.txt  qmpmpris.cpp  qmpmpris.hpp  qmpmprisimpl.cpp  qmpmprisimpl.hpp  qmprisdbusinterface.cpp  qmprisdbusinterface.hpp  qmpriswrapper.cpp  qmpriswrapper.hpp
qmidiplayer-desktop/: CMakeLists.txt  main.cpp  org.chrisoft.qmidiplayer.appdata.xml  org.chrisoft.qmidiplayer.desktop  qdialskulpturestyle.cpp  qdialskulpturestyle.hpp  qmidiplayer-desktop.pro  qmidiplayer.appdata.xml  qmidiplayer.desktop  qmidiplayer.exe.xml  qmidiplayer.mime  qmidiplayer.rc  qmidiplayer.rc.in  qmpchanneleditor.cpp  qmpchanneleditor.hpp  qmpchanneleditor.ui  qmpchannelswindow.cpp  qmpchannelswindow.hpp  qmpchannelswindow.ui  qmpcustomizewindow.cpp  qmpcustomizewindow.hpp  qmpcustomizewindow.ui  qmpdeviceprioritydialog.cpp  qmpdeviceprioritydialog.hpp  qmpdeviceprioritydialog.ui  qmpdevpropdialog.cpp  qmpdevpropdialog.hpp  qmpdevpropdialog.ui  qmpefxwindow.cpp  qmpefxwindow.hpp  qmpefxwindow.ui  qmphelpwindow.cpp  qmphelpwindow.hpp  qmphelpwindow.ui  qmpimidimapper.hpp  qmpinfowindow.cpp  qmpinfowindow.hpp  qmpinfowindow.ui  qmpmainwindow.cpp  qmpmainwindow.hpp  (+15 more)
qmidiplayer-desktop/menu/: qmidiplayer
qmidiplayer-desktop/translations/: qmp_zh_CN.ts
qmidiplayer-lite/: main.cpp  main.qml  qmidiplayer-lite.pro  qmpcorewrapper.hpp  qmpmidiplay.cpp  qmpmidiplay.hpp  qmpmidiread.cpp
qmidiplayer.src.d/: qmpchanneleditor.cpp  qmpchanneleditor.ui  qmpchannelswindow.cpp  qmpchannelswindow.hpp  qmpchannelswindow.ui  qmpefxwindow.hpp  qmpefxwindow.ui  qmpinfowindow.ui  qmpmainwindow.cpp  qmpmainwindow.hpp  qmpplistwindow.hpp  qmpplistwindow.ui  qmppresetselect.ui  qmpsettingswindow.cpp
qmidiplayerlite.src.d/: main.qml  qmpcorewrapper.hpp
sample-plugin/: CMakeLists.txt  sample-plugin.pro  sampleplugin.cpp  sampleplugin.hpp
simple-visualization/: CMakeLists.txt  qmpkeyboardwindow.cpp  qmpkeyboardwindow.hpp  qmppianowidget.cpp  qmppianowidget.hpp  simple-visualization.pro  simple-visualization.rc  simple-visualization.rc.in  simplevisualization.cpp  simplevisualization.hpp
visualization/: CMakeLists.txt  extrasmeltutils.cpp  extrasmeltutils.hpp  qmpvirtualpiano3d.cpp  qmpvirtualpiano3d.hpp  qmpvisualization.cpp  qmpvisualization.hpp  visualization.pro  visualization.rc  visualization.rc.in
visualization/renderer/: CMakeLists.txt  main.cpp  qmppluginapistub.cpp  qmppluginapistub.hpp  qmpsettingsro.cpp  qmpsettingsro.hpp  qmpvisrendercore.cpp  qmpvisrendercore.hpp
windows-extra/: CMakeLists.txt  windowsextra.cpp  windowsextra.hpp
